fix: global header action items focus contrast fix (#5531)

--- a/ui/components/global-header/global-actions/_index.scss
+++ b/ui/components/global-header/global-actions/_index.scss
@@ -78,6 +78,10 @@
     box-shadow: var(--slds-g-shadow-outset-focus-1);
     outline: 0;
   }
+
+  &.slds-global-actions__item-action:focus-visible {
+    box-shadow: var(--slds-g-shadow-outset-focus-1);
+  }
 }
 
 /**
@@ -200,6 +204,10 @@
   &.slds-global-actions__item-action:hover,
   &.slds-global-actions__item-action:active {
     color: var(--slds-g-color-neutral-base-100, #{$color-gray-1});
+  }
+
+  &.slds-global-actions__item-action:focus-visible {
+    box-shadow: var(--slds-g-shadow-outset-focus-1);
   }
 
   .slds-button__icon {
